--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -13,12 +13,12 @@
     </li>
 
 }
-@section styles{
+    @section styles{
 
 
 }
 
-@section scripts{
+    @section scripts{
 
     <script>
         var btn = document.getElementById('Guardar');
@@ -28,22 +28,68 @@
 
             btn.disabled = false;
         }
+
+        function ImprimeEtiqueta(boleta, cliente) {
+            var html = htmlLlamada;
+            html = html.replace("NombreCliente", $("#cardcode1").val());
+            html = html.replace("NombreContacto", $("#personaContacto").val());
+            html = html.replace("email", $("#emailPersonaContacto").val());
+            html = html.replace("telcontacto", $("#telefonoPersonaContacto").val());
+
+            html = html.replace("EquipoDelClie", $("#prod").val());
+            html = html.replace("SerieR", $("#serie").val());
+            html = html.replace("FechaR", $("#fecha").val());
+
+            html = html.replace("SucursalR", $("#sr option:selected").text());
+            html = html.replace("SucE", $("#srt option:selected").text());
+
+           
+            html = html.replace("ObservacionesR", $("#asunto").val());
+            html = html.replace("DiagnosticosDelCliente", $("#comentarios").val());
+
+            html = html.replace("NumBoleta", $("#boleta").val());
+
+
+
+
+            html = html.replace("Imagen", "<img src='" + '@Model.Input.Firma' + "' width='100'   />" );
+
+
+
+            var item = html;
+
+            var opt = {
+                margin: 1,
+                pagebreak: { mode: 'avoid-all', before: '#page2el' },
+
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2 },
+                jsPDF: { format: 'letter', orientation: 'portrait' }
+            };
+
+
+
+            html2pdf().set(opt)
+                .from(item)
+                .save("Llamda.pdf");
+
+        }         
     </script>
 
 }
-@using Microsoft.AspNetCore.Http
-@using System;
-@using System.Collections.Generic;
-@using System.IO;
-@using System.Linq;
-@using System.Security.Claims;
-@using System.Threading.Tasks;
-@using Microsoft.AspNetCore.Mvc;
-@using Microsoft.AspNetCore.Mvc.RazorPages;
-@using Microsoft.Extensions.Configuration;
-@using Refit;
-@using Sicsoft.Checkin.Web.Models;
-@inject IHttpContextAccessor httpContextAccessor
+    @using Microsoft.AspNetCore.Http
+    @using System;
+    @using System.Collections.Generic;
+    @using System.IO;
+    @using System.Linq;
+    @using System.Security.Claims;
+    @using System.Threading.Tasks;
+    @using Microsoft.AspNetCore.Mvc;
+    @using Microsoft.AspNetCore.Mvc.RazorPages;
+    @using Microsoft.Extensions.Configuration;
+    @using Refit;
+    @using Sicsoft.Checkin.Web.Models;
+    @inject IHttpContextAccessor httpContextAccessor
 @{
     var Roles = ((ClaimsIdentity)User.Identity).Claims.Where(d => d.Type == "Roles").Select(s1 => s1.Value).FirstOrDefault().Split("|");
 }
@@ -86,20 +132,25 @@
 
                                 <input type="text" class="form-control form-control-lg" id="prod" placeholder="" asp-for="Input.ItemCode" hidden>
                                 <input type="text" class="form-control form-control-lg" id="serie" asp-for="Input.SerieFabricante" hidden>
+                                <input type="text" class="form-control form-control-lg" id="boleta" asp-for="Input.DocEntry" hidden>
+
+                                <input type="text" class="form-control form-control-lg" id="fecha" value="@DateTime.Now" hidden>
+
 
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Fecha SISO:</label>
-                                @{if (!string.IsNullOrEmpty(Roles.Where(a => a == "33").FirstOrDefault()))
+                                @{
+                                    if (!string.IsNullOrEmpty(Roles.Where(a => a == "33").FirstOrDefault()))
                                     {
 
-                                        <input type="date" class="form-control form-control-lg" id="fecsiso" placeholder="" asp-for="Input.FechaSISO">
+                                                <input type="date" class="form-control form-control-lg" id="fecsiso" placeholder="" asp-for="Input.FechaSISO">
                                     }
                                     else
                                     {
-                                        <input type="date" class="form-control form-control-lg" id="fecsiso" placeholder="" asp-for="Input.FechaSISO" readonly>
+                                                <input type="date" class="form-control form-control-lg" id="fecsiso" placeholder="" asp-for="Input.FechaSISO" readonly>
                                     }
 
                                 }
@@ -113,7 +164,7 @@
                             <div class="form-group">
                                 <label>Estado:</label>
                                 <select id="status" class="form-control" asp-for="Input.Status" required>
-                                    <option value="0">Seleccione</option>
+                                    <!-- <option value="0">Seleccione</option> -->
                                     @foreach (var item in Model.Status)
                                     {
                                         <option value="@item.idSAP">@item.Nombre</option>
@@ -149,22 +200,22 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Persona de Contacto:</label>
-                                  <input type="text" class="form-control form-control-lg" id="personaContacto" placeholder="Nombre Persona Contacto" asp-for="Input.PersonaContacto">
+                                <input type="text" class="form-control form-control-lg" id="personaContacto" placeholder="Nombre Persona Contacto" asp-for="Input.PersonaContacto">
 
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label> Correo Persona Contacto:</label>
-                                  <input type="email" class="form-control form-control-lg" id="emailPersonaContacto" placeholder="Email Persona Contacto" asp-for="Input.EmailPersonaContacto">
-                                 
+                                <input type="email" class="form-control form-control-lg" id="emailPersonaContacto" placeholder="Email Persona Contacto" asp-for="Input.EmailPersonaContacto">
+
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Telefono Persona Contacto:</label>
-                                  <input type="tel" class="form-control form-control-lg" id="telefonoPersonaContacto" placeholder="Telefono Persona Contacto" asp-for="Input.NumeroPersonaContacto">
-                                
+                                <input type="tel" class="form-control form-control-lg" id="telefonoPersonaContacto" placeholder="Telefono Persona Contacto" asp-for="Input.NumeroPersonaContacto">
+
                             </div>
                         </div>
                     </div>
@@ -196,15 +247,15 @@
 
                         <div class="col-sm-6">
                             @*<div class="form-group">
-                                    <label>Garantía:</label>
-                                    <select id="garantia" class="form-control" asp-for="Input.Garantia" required>
-                                        <option value="0">Seleccione</option>
-                                        @foreach (var item in Model.Garantias)
-                                        {
-                                            <option value="@item.idSAP">@item.Nombre</option>
-                                        }
-                                    </select>
-                                </div>*@
+                            <label>Garantía:</label>
+                            <select id="garantia" class="form-control" asp-for="Input.Garantia" required>
+                            <option value="0">Seleccione</option>
+                            @foreach (var item in Model.Garantias)
+                            {
+                            <option value="@item.idSAP">@item.Nombre</option>
+                            }
+                            </select>
+                            </div>*@
                             <div class="form-group">
                                 <label>Técnico:</label>
                                 <select id="srt" class="form-control" asp-for="Input.Tecnico" required>
@@ -242,7 +293,18 @@
                             <div class="form-group">
                                 <label>Asunto:</label>
 
-                                <input type="text" class="form-control form-control-lg" id="asunto" placeholder="Asunto" asp-for="Input.Asunto">
+                                <select id="asunto" class="form-control" asp-for="Input.Asunto" required>
+
+                                    @foreach (var item in Model.Asuntos)
+                                    {
+
+                                        <option value="@item.Asunto">@item.Asunto</option>
+
+
+                                    }
+                                </select>
+@*
+                                //<input type="text" class="form-control form-control-lg" id="asunto" placeholder="Asunto" asp-for="Input.Asunto">*@
 
 
                             </div>
@@ -279,6 +341,8 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
+                <button title="PDF" type="button" class="btn btn-rounded btn-outline-danger" onclick="javascript: ImprimeEtiqueta()">PDF</button>
+                                        &nbsp;
                 <button type="button" id="Guardar" class="btn btn-rounded btn-outline-success" onclick="javascript: onGuardar()">Guardar Cambios</button>
             </div>
         </div>
