--- a/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" />
 
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <link rel="stylesheet" href="~/css/assets/vendor/fonts/circular-std/style.css" />
     <link rel="stylesheet" href="~/css/assets/vendor/datatables/css/dataTables.bootstrap4.css" />
